Updated Enclosure.java